# pdfparser

./: README.md  pyproject.toml  requirements.txt  setup.py  test_parser.py
smart_pdf_parser/: __init__.py  cli.py  main.py
smart_pdf_parser/core/: content.py  parser.py  structure.py  tables.py
smart_pdf_parser/formatters/: ascii_formatter.py  base.py  json_formatter.py  markdown_formatter.py
smart_pdf_parser/models/: __init__.py  document.py  section.py  table.py
smart_pdf_parser/utils/: exceptions.py  logger.py  validators.py
